potential fix for css not showing on github pages

--- a/resources/index.css
+++ b/resources/index.css
@@ -8,7 +8,7 @@
 }
 html {
   font-family:space, sans-serif;
-  background-image: url("./resources/images/jake-buonemani-WvK0EsbfG7U-unsplash.jpg");
+  background-image: url("../resources/images/jake-buonemani-WvK0EsbfG7U-unsplash.jpg");
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -47,14 +47,13 @@ li:hover{
   background-color: black;
   color: white;
 }
-#container1 {
+
+.container2 {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
 }
-.intro {
-  margin: auto;
-}
+
 .intro h1 {
   text-transform: uppercase;
   color:white;
@@ -80,7 +79,6 @@ li:hover{
   box-sizing: border-box;
   border-radius: 10px;
   padding:3%;
-  
 }
 .star1, .star2, .star3, .star4{
   box-sizing: border-box;
@@ -113,4 +111,17 @@ li:hover{
   box-sizing: border-box;
   border:2px solid black;
   cursor: pointer;
+}
+@media only screen and (max-width:1157px) {
+
+  .star1, .star2, .star3, .star4{
+    width: 100%;
+  }
+  .intro h1 {
+    font-size: 6em;
+  }
+  .cont {
+    width:80%;
+    margin: 0 auto;
+  }
 }
